--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
   image_picker: ^1.1.2
+  path_provider: ^2.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
